Some changes to test directory structure and new test

--- a/tests/syntax/fail1.conf
+++ b/tests/syntax/fail1.conf
@@ -2,10 +2,10 @@ init(q0);
 acc(qac);
 rej(qrej);
 
-RejectOthers();
+rejectOthers();
 
 q0 ->
-    q1: '&' -> ' ', c;
+    '&' -> ' ', r;
 
 q1 -> {
     q2:
