--- a/tests/syntax/pass3.conf
+++ b/tests/syntax/pass3.conf
@@ -2,10 +2,10 @@ init(q0);
 acc(qac);
 rej(qrej);
 
-RejectOthers();
+rejectOthers();
 
-q0 ->
-    '&' -> ' ', r;
+'q' ->
+    q1: '&' -> ' ', r;
 
 q1 -> {
     q2:
