--- a/tests/syntax/fail2.conf
+++ b/tests/syntax/fail2.conf
@@ -2,10 +2,10 @@ init(q0);
 acc(qac);
 rej(qrej);
 
-RejectOthers();
+rejectOthers();
 
-'q' ->
-    q1: '&' -> ' ', r;
+q0 ->
+    q1: '&' -> ' ', c;
 
 q1 -> {
     q2:
