--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
 language: cpp
-install: ./install-dependencies.sh
-script: make
 
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-9
+matrix:
+  include:
+    os: linux
+          addons:
+            apt:
+              sources:
+                - ubuntu-toolchain-r-test
+              packages:
+                - g++-9
+          env:
+            - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+
 branches:
   only:
     - main
+
+before_install:
+    - eval "${MATRIX_EVAL}"
+install: ./install-dependencies.sh
+script: make
