--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,15 @@ language: cpp
 
 matrix:
   include:
-    os: linux
+   - os: linux
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-9
+            - g++-7
       env:
-        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
 branches:
   only:
