--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,18 @@
 language: cpp
 
-jobs:
-  include:
-   - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+os:
+- linux
+
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:ubuntu-toolchain-r/test'
+    packages:
+    - gcc-9
+    - g++-9
 
 branches:
   only:
     - main
-
-before_install:
-    - eval "${MATRIX_EVAL}"
 install: ./install-dependencies.sh
 script: make
