--- a/tests/syntax/pass9.conf
+++ b/tests/syntax/pass9.conf
@@ -7,9 +7,8 @@ rej(qrej);
 @Override, Reset;
 rejectOthers();
 
-@Override;
 'q' ->
-    @Override;
+    @Override, Surpress;
     q1: '&' -> ' ', r;
 
 q1 -> {
