Added decorators for the methods

--- a/extend-test.conf
+++ b/extend-test.conf
@@ -1,12 +1,4 @@
 extend("example.conf");
 
-q0 ->
-    qac:
-        a->a, s;
-
-q1 -> q4:
-    @Override;
-    0->0,r;
-
-q4 -> q2:
-    0->0,r;
+@Surpress;
+init(q1);
